added psuedo code in multiple places, still unsure which route to go with

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <h1>WEATHER</h1>
     </header>
-    <main>
+    <main>ATLANTA
     
     </main>
-    <aside>
+    <aside>Search for a City:
 
 
     </aside>
