added in new search function, still has erros but basically works

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Document</title>
+    <title>Weather-er</title>
 </head>
 <body>
     <header>
         <h1>WEATHER</h1>
+
     </header>
-    <main>ATLANTA
+    <main>
+        <input class = "city-name" type="text">
     
     </main>
-    <aside>Search for a City:
+    <aside class = "search-history">Previous citys
 
 
     </aside>
