finished all local storage stuff, reset function, etc.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="container flex">
         <aside class="search-history">
             <h2 class = "container-label">Previous Citys</h2>
+            <ul class= "searched-cities"></ul>
 
 
         </aside>
