refactor slightly, no major changes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </aside>
         <main class= "dashboard">
             <h2 class = "container-label">Today's Forecast</h2>
+            <ul class="todays-weather">Insert City name here</ul>
 
         </main>
        
