added media queery for mobile first design

--- a/index.html
+++ b/index.html
@@ -10,24 +10,31 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="title">Have you ever wondered about the Weather?</h1>
-        <p class="prompt"> Enter a City's name below</p>
-        <input class="city-name" type="text" placeholder="Search">
-    </header>
-    <div class="container flex">
-        <aside class="search-history">
-            <h2 class = "container-label">Previous Citys</h2>
-            <ul class= "searched-cities"></ul>
+    <div class="container">
+        <header>
+            <h1 class="title">Have you ever wondered about the Weather?</h1>
+            <p class="prompt"> Enter a City's name below</p>
+            <input class="city-name" type="text" placeholder="Search">
+        </header>
+        <div class=" container flex">
+            <aside class=" search-history">
+                <h2 class="container-label">Previous Citys</h2>
+                <ul class="searched-cities"></ul>
 
 
-        </aside>
-        <main class= "dashboard">
-            <h2 class = "container-label">Today's Forecast</h2>
-            <ul class="todays-weather">Insert City name here</ul>
-
-        </main>
-       
+            </aside>
+            <main class="dashboard">
+                <h2 class="container-label">Today's Forecast</h2>
+                <p>Boston</p>
+                <ul class="todays-weather">
+                    <li>High</li>
+                    <li>Low</li>
+                    <li>Pressure</li>
+                    <li>Clouds</li>
+                    <li>air pollution</li>
+                </ul>
+            </main>
+        </div>
     </div>
     <script src="assets/script.js"></script>
 </body>
