added a forecast reset function

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <main class="dashboard">
                     <h2 class="container-label date">Today's Forecast</h2>
                     <h3 class="city-weather"></h3>
+                    <div class = "today-type"></div>
                     <img class="icon"></img>
                     <ul class="todays-weather">
                         <li class='high'></li>
@@ -40,7 +41,7 @@
                 </main>
             </div>
             <section class="forecast"> 
-                <h2 class = "container-label">5 Day Outlook here</h2>
+                <h2 class = "container-label week">5 Day Outlook here</h2>
                 <div class = "forecast-card"></div>
             </section>
         </div>
