added button for mobile users to click

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h1 class="title">Have you ever wondered about the Weather?</h1>
             <p class="prompt"> Enter a City's name below</p>
             <input class="city-name" type="text" placeholder="Search">
+            <button class= "btn">Search</button>
         </header>
         <div class=" container">
             <div class="flex">
