made forecast a flex box

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <section class="forecast"> 
                 <h2 class = "container-label week">5 Day Outlook here</h2>
-                <div class = "forecast-card"></div>
+                <div class = "forecast-card flex"></div>
             </section>
         </div>
         
