finishing touches on code

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class=" container">
             <div class="flex">
                 <aside class=" search-history">
-                    <h2 class="container-label">Previous Citys</h2>
-                    <ul class="searched-cities"></ul>
+                    <h2 class="container-label">Search History</h2>
+                    <div class="searched-cities"></div>
 
 
                 </aside>
@@ -32,17 +32,17 @@
                     <h3 class="city-weather"></h3>
                     <div class = "today-type"></div>
                     <img class="icon"></img>
-                    <ul class="todays-weather">
-                        <li class='high'></li>
-                        <li class='low'></li>
-                        <li class='pressure'></li>
-                        <li class="humidity"></li>
-                        <li class="wind"></li>
-                    </ul>
+                    <div class="todays-weather">
+                        <p class='high'></p>
+                        <p class='low'></p>
+                        <p class='pressure'></p>
+                        <p class="humidity"></p>
+                        <p class="wind"></p>
+                    </div>
                 </main>
             </div>
             <section class="forecast"> 
-                <h2 class = "container-label week">5 Day Outlook here</h2>
+                <h2 class = "container-label week">Five Day Outlook</h2>
                 <div class = "forecast-card flex"></div>
             </section>
         </div>
